improved menu on mobile, fixed #31

--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -3,7 +3,7 @@ nav {
     height: 60px;
     
     ul {
-        overflow: hidden;
+		top: 60px;
         position: absolute;
         box-sizing: border-box;
         list-style: none;
@@ -13,10 +13,18 @@ nav {
         background-color: #fff;
         width: 100%;
         max-width: 400px;
-        min-height: 100vh;
+        height: calc(100vh - 60px);
+		overflow-x: hidden;
+		overflow-y: auto;
         transform: translate3d(-100%, 0, 0);
         transition: all ease .5s;
         border: 2px solid #f6f6f6;
+		
+		@media(min-width: $bp1) {
+			top: 0;
+			height: auto;
+			bottom: auto;
+		}
     }
     
     ul li {
@@ -43,8 +51,6 @@ nav {
         }
         
         &.active {
-//            background-color: $darkgrey;
-//            color: $softwhite;
             font-weight: bold;
         }
     }
@@ -66,7 +72,9 @@ nav {
         
         .hamburger-button {
             background-color: #f6f6f6;
+			z-index: 1;
         }
+		
         
         .hamburger-button i:before {
             content: "\f00d";
